# RTMPPushPractice

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dwayne/com/rtmppushpractice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dwayne/com/rtmppushpractice/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  address_dialog.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dwayne/com/rtmppushpractice/: ExampleUnitTest.kt
common/: build.gradle
common/src/androidTest/java/com/dwayne/com/common/: ExampleInstrumentedTest.kt
common/src/main/: AndroidManifest.xml
common/src/main/cpp/: CMakeLists.txt  common.cpp
common/src/main/cpp/player/: AudioChannel.cpp  JNICallback.cpp  Player.cpp  VideoChannel.cpp  player-lib.cpp
common/src/main/cpp/player/include/: BaseChannel.h  JNICallback.h  Player.h  VideoChannel.h
common/src/main/cpp/pusher/: AudioChannel.cpp  PushCallback.cpp  Pusher.cpp  RTMPModel.cpp  VideoChannel.cpp
common/src/main/cpp/pusher/include/: AudioChannel.h  PushCallback.h  Pusher.h  RTMPModel.h  VideoChannel.h
common/src/main/cpp/utils/: Constants.h  macro.h  safe_queue.h
common/src/main/java/com/dwayne/com/: Constants.java
common/src/main/java/com/dwayne/com/audio/: AudioEncoder.java  AudioProcessor.java  AudioUtils.java  OnAudioEncodeListener.java
common/src/main/java/com/dwayne/com/blacklist/: BlackListHelper.java
common/src/main/java/com/dwayne/com/camera/: CameraData.java  CameraHolder.java  CameraListener.java  CameraUtils.java  CameraZoomListener.java
common/src/main/java/com/dwayne/com/capture/: AudioCapture.java  CameraCapture.java
common/src/main/java/com/dwayne/com/common/: NativeLib.kt
common/src/main/java/com/dwayne/com/configuration/: AudioConfiguration.java  CameraConfiguration.java  VideoConfiguration.java
common/src/main/java/com/dwayne/com/constant/: SopCastConstant.java
common/src/main/res/layout/: layout_camera_view.xml
gradle/wrapper/: gradle-wrapper.properties
(+104 files in other folders)
